you can now link your repower account with your twitter account in the profile edit page as well as post an update via the magnify your impact link.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,8 +333,8 @@ acronym {
 .action_nugget .completion { font-weight: bold; }
 /* @end */
 
-/* @group house_party */
-#house_party_dialog { display: none; }
+/* @group magnify_your_impact */
+#house_party_dialog, #twitter_post_dialog { display: none; }
 /* @end */
 
 /* @group comments */
