--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,9 +148,10 @@ acronym {
 }
 
 /* Messages */
-#message_box { text-align: center; }
+#message_box { text-align: center; width: 960px; margin-left: auto; margin-right: auto;}
+#message_box ul { list-style-type: none; }
 
-.info, .success, .warning, .error, .validation {
+#message_box .info, #message_box .success, #message_box .warning, #message_box .error, #message_box .validation {
     border: 2px solid;
     margin: 10px 0px;
     padding:10px;
@@ -345,9 +346,10 @@ acronym {
 .action_nugget .completion { font-weight: bold; }
 /* @end */
 
-/* @group house_party */
+/* Magnify stuff*/
 #house_party_dialog { display: none; }
-/* @end */
+#invite_friend_dialog { display: none; }
+#invite_friend_dialog textarea { width:100%; height: 100px;}
 
 /* @group comments */
 .comment .author { margin-top: -15px; }
@@ -763,3 +765,8 @@ acronym {
 .ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
 .ui-tabs .ui-tabs-panel { padding: 1em 1.4em; display: block; border-width: 0; background: none; }
 .ui-tabs .ui-tabs-hide { display: none !important; }
+
+
+
+/* UI overrides */
+.ui-widget { font-family: Arial, Times, 'Times New Roman', serif; font-size: 1em; }
