--- a/static/css/style.css
+++ b/static/css/style.css
@@ -348,7 +348,7 @@ acronym {
 
 /* Magnify stuff*/
 #twitter_post_dialog, #invite_friend_dialog, #house_party_dialog { display: none; }
-#invite_friend_dialog textarea, #twitter_post_dialog textarea{ width:100%; height: 100px;}
+#invite_friend_dialog textarea, #twitter_post_dialog textarea, #feedback_dialog textarea{ width:100%; height: 100px;}
 
 /* @group comments */
 .comment .author { margin-top: -15px; }
