removed the password_reset_done template and instead replaced this with a message to be displayed on the home page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,5 +10,5 @@
         {% csrf_token %}
     </form>
     <a href="{% url rah.views.register %}">Register</a> | 
-    <a href="{% url django.contrib.auth.views.password_reset %}">Recover password</a>
+    <a href="{% url password_reset %}">Recover password</a>
 {% endblock %}
