removed the password reset complete template and replaced it with a success message on the home page telling the user their password has successfully been reset. Also slightly modified the password reset confirm page by removing the form altogether in the event that the link is no longer valid. [completed: 65]

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,8 +1,12 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <form action="" method="post">
-        {{form.as_p}}
-        <input type="submit" value="Reset password" />
-        {% csrf_token %}
-    </form>
+	{% if form %}
+	    <form action="" method="post">
+	        {{form.as_p}}
+	        <input type="submit" value="Reset password" />
+	        {% csrf_token %}
+	    </form>
+	{% else %}
+		<p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
+	{% endif %}
 {% endblock %}
