--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                     {% if user.is_authenticated %}
                         {{ user.get_welcome }} | <a href="{% url logout %}">Logout</a>
                     {% else %}
-                        <a href="{% url login %}">Login</a> | <a href="{% url register %}">Sign Up</a>
+                        <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a>
                     {% endif %}
                     | <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a>
 					{% if user.is_staff %}
@@ -60,6 +60,9 @@
                 {% block minorcol %}{% endblock %}
             </div>
         </div>
+		<div>
+			{{ request.META.HTTP_REFERER }}
+		</div>
         <div id="footer-container">
             <div id="footer">
                 <div class="search-container">
