--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,7 +1,9 @@
 {% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
-			<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+			<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+				<a href="#" class="dismiss">close</a>{{ message }}
+			</li>
 		{% endfor %}
 	</ul>
 {% endif %}
