--- a/templates/comments/_comment_list.html
+++ b/templates/comments/_comment_list.html
@@ -5,7 +5,7 @@
 	<h2>Comments</h2>
 	{% for comment in comments %}
 		<div class="comment">
-			<p>{{ comment.comment|safe|linebreaks }}</p>
+			{{ comment.comment|safe|linebreaks }}
 			<p class="author">
 				{% if comment.user != user and comment.user.get_profile.is_profile_private %}
 					-- Posted by {% firstof comment.user.get_full_name 'Repower@Home User' %} on {{ comment.submit_date|date:"F j, Y" }}
