--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends "rah/base.html" %}
 {% block content %}
 	{% if form %}
-	    <form action="" method="post">
+	    <form id="password_reset_confirm" action="" method="post">
 	        {{form.as_p}}
 	        <input type="submit" value="Reset password" />
 	        {% csrf_token %}
@@ -10,3 +10,4 @@
 		<p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
 	{% endif %}
 {% endblock %}
+{% block js %}page_password_reset_confirm{% endblock %}
