--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,7 +10,7 @@
 </form>
 <a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
 <a href="{% url django.contrib.auth.views.password_reset %}">Recover password</a>
-<div id="dialog">
+<div id="dialog" class="dialog">
     <form action="" method="post" id="profile_form">
         <div>
             {{ profileForm.as_p }}
