--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,8 +1,9 @@
 {% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
-			<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-				<a href="#" class="dismiss">close</a>{{ message }}
+			<li class="messages {{ message.tags }}">
+				{{ message }}
+				<a href="#" class="dismiss">close</a>
 			</li>
 		{% endfor %}
 	</ul>
