--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,9 +1,10 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <form action="" method="post">
+    <form id="password_change_form" action="" method="post">
         {{form.as_p}}
         <input type="submit" value="Submit" />
         <input type="hidden" name="next" value="{{ next|escape }}" />
         {% csrf_token %}
     </form>
 {% endblock %}
+{% block js %}page_password_change{% endblock %}
