--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         </script>
     </head>
     <body>
+		<div id="loading" class="warning">Loading...</div>
         <div id="header-container">
             <div id="header">
                 <a href="/" title="Repower America" class="site-logo">Repower @ Home</a>
