--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,6 +171,7 @@ acronym {
 .success { color: #4F8A10; background-color: #DFF2BF; }
 .warning { color: #9F6000; background-color: #FEEFB3; }
 .error   { color: #D8000C; background-color: #FFBABA; }
+.ga_track_pageview {display:none;}
 
 /** Content Containers **/
 #content-container {
