--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}{% endblock %} | Repower@Home</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
         <link rel="shortcut icon" href="{{ MEDIA_URL }}images/theme/favico.ico"/>
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/style{%if not debug%}_min{%endif%}.css" type="text/css" media="screen" charset="utf-8"/>
 		<link rel="alternate" type="application/rss+xml"  href="{% url feed 'blog' %}" title="Repower@Home Blog" />
@@ -10,11 +11,6 @@
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-11623269-1']);
             _gaq.push(['_trackPageview']);
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
-            })();
         </script>
     </head>
     <body>
@@ -93,5 +89,12 @@
         <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/js_libs{%if not debug%}_min{%endif%}.js"></script>
         {% block extrajs %}{% endblock %}
         <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/rah{%if not debug%}_min{%endif%}.js"></script>
+        <script type="text/javascript">
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+            })();
+        </script>
     </body>
 </html>
