--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -10,7 +10,7 @@
 			<a id="link_with_twitter" href="{% url twitter_oauth_auth %}">Link your account with twitter</a>
 		{% endif %}
     </p>
-    <form action="" method="post">
+    <form action="" method="post" id="profile_edit_form">
         <div>
             {{account_form.as_p}}
             {{profile_form.as_p}}
@@ -20,3 +20,4 @@
         </div>
     </form>
 {% endblock %}
+{% block js %}page_profile_edit{% endblock %}
