--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,8 @@
                     </div>
                 </form>
                 <div id="nav">
-                    <a href="{% url rah.views.index %}">Home</a>&nbsp;
-                    <a href="{% url rah.views.action_show %}">Actions</a>&nbsp;
+                    <a href="{% url rah.views.index %}">Home</a> |
+                    <a href="{% url rah.views.action_show %}">Actions</a> |
 					<a href="{% url blog_index %}">Blog</a>
                     {# <a href="">About us</a> #}
                 </div>
