if you link you attempt to link your twitter account directly from the magnify your impact link, you will now be immediately directed to twitter, opposed to going to the profile edit page first. [completed: 102]

--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -30,7 +30,7 @@
 		</form>
 	{% else %}
 		<p>
-		    You need to <a href='{% url profile_edit user.id %}'>link your account with Twitter</a> 
+		    You need to <a href="{% url twitter_oauth_auth %}?next={{ request.path }}">link your account with Twitter</a> 
 		    before you can do this.
 		</p>
 	{% endif %}
