--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -3,7 +3,7 @@
     <a href='{% url rah.views.house_party %}' id='house_party_link'>Host a house party</a><br/>
     <a href='{% url rah.views.invite_friend %}' id='invite_friend_link'>Invite a friend</a><br/>
     <a href='{% url twitter_oauth_post_status %}' class='twitter_status'>Share on twitter</a><br/>
-    <a href='{% url create_group %}'>Create a group</a>
+    <a href='{% url group_create %}'>Create a group</a>
 </p>
 <div id='house_party_dialog'>
 	<form action="{% url rah.views.house_party %}" method="post" id="house_party_form">
