Adding JS popup for setting commit date for those blessed with such technology. Still need to add a way to delete commitments and update action_table->total commitments

--- a/templates/rah/_action_commit.html
+++ b/templates/rah/_action_commit.html
@@ -1,9 +1,11 @@
 <p>
     When do you think you'll complete this action?
 </p>
-<div id="calendar"></div>
+<div id="commit_calendar"></div>
 <form action="{% url action_commit action.slug %}" method="post" id="commit_form">
-    <div>{{commit_form.as_p}}</div>
-    <input type="submit" value="Submit" id="commit_submit"/>
+    <div>
+        {{commit_form.as_p}}
+        <input type="submit" value="Submit" id="commit_submit"/>
+    </div>
     {% csrf_token %}
 </form>
