--- a/templates/rah/group_detail.html
+++ b/templates/rah/group_detail.html
@@ -8,7 +8,7 @@
         <h1>{{ group.name }}</h1>
         <p>{{ group.description }}</p>
         <p class="membership_type">
-            Group Type: {% if group.membership_type == "O" %}Public{% else %}Private{% endif %}
+            Group Type: {% if group.is_public %}Public{% else %}Private{% endif %}
         </p>
     </div>
     
@@ -75,8 +75,19 @@
 
 {% endblock %}
 {% block minorcol %}
-    {% if not is_member %}
+    {% if not is_member and not membership_pending %}
         <a href="{% url group_join group.id %}">Join this Group</a>
     {% endif %}
+    {% if membership_pending %}
+        Your membership status is currently pending.
+    {% endif %}
+    
+    {% for requester in requesters %}
+        <div class="membership_request">
+            {{ requester }} would like to join<br/>
+            <a href="{% url group_approve group.id requester.id %}">Approve</a> or 
+            <a href="{% url group_deny group.id requester.id %}">Deny</a>
+        </div>
+    {% endfor %}
 {% endblock %}
 {% block js %}page_group_detail{% endblock %}
