--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -48,6 +48,12 @@
 	{% if not is_others_profile %}
         {% include 'rah/_magnify.html' %}
 	{% endif %}
+	{% if my_groups %}
+	    <h2>Groups</h2>
+	    {% for group in my_groups %}
+	        <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
+	    {% endfor %}
+	{% endif %}
 	{% if completed %}
 	    <h2>Completed Actions</h2>
         <p>
