--- a/templates/comments/_comment_list.html
+++ b/templates/comments/_comment_list.html
@@ -1,4 +1,5 @@
 {% load comments %}
+{% load ratings %}
 
 {% get_comment_list for object as comments %}
 {% if comments %}
@@ -13,6 +14,17 @@
 					-- Posted by <a href="{% url profile comment.user.id %}">{{ comment.user.get_full_name }}</a> on {{ comment.submit_date|date:"F j, Y" }}
 				{% endif %}
 			</p>
+			<div>
+			    {% get_rating_count for comment as users_voted %}
+			    {% get_rating_sum for comment as users_helped %}
+			    {% if users_voted %}
+			        {{ users_helped }} out of {{ users_voted }} user{{ users_voted|pluralize }} found this helpful.<br />
+			    {% endif %}
+			    {% if user.is_authenticated %}
+        		    <span class="comment_helpful_question">Did you find this comment helpful?</span>
+        			{% get_rating_form for comment %}
+        		{% endif %}
+			</div>
 		</div>
 	{% endfor %}
 {% endif %}
