--- a/rateable/templates/rateable/form.html
+++ b/rateable/templates/rateable/form.html
@@ -1,4 +1,4 @@
-<form action="{% url rateable-rate %}" method="post">
+<form class="rateable_rate_form" action="{% url rateable-rate %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <p><input type="hidden" name="next" value="{{ request.path }}" /></p>
