--- a/templates/rah/invite_friend_email.html
+++ b/templates/rah/invite_friend_email.html
@@ -1,6 +1,6 @@
 Hello, 
 
-{{ from_user.get_name }} invited you to repowerathome.com. 
+{{ from_user }} invited you to repowerathome.com. 
 
 {% if note %}Note: {{ note }}{% endif %}
 
