--- a/templates/comments/_comment_list.html
+++ b/templates/comments/_comment_list.html
@@ -1,5 +1,6 @@
 {% load comments %}
 {% load ratings %}
+{% load rah %}
 
 {% get_comment_list for object as comments %}
 {% if comments %}
@@ -8,11 +9,7 @@
 		<div class="comment">
 			{{ comment.comment|safe|linebreaks }}
 			<p class="author">
-				{% if comment.user != user and comment.user.get_profile.is_profile_private %}
-					-- Posted by {{ comment.user.get_full_name }} on {{ comment.submit_date|date:"F j, Y" }}
-				{% else %}
-					-- Posted by <a href="{% url profile comment.user.id %}">{{ comment.user.get_full_name }}</a> on {{ comment.submit_date|date:"F j, Y" }}
-				{% endif %}
+				-- Posted by {% safe_user_link comment.user %} on {{ comment.submit_date|date:"F j, Y" }}
 			</p>
 			<div>
 			    {% get_rating_count for comment as users_voted %}
