Adding more activity templates Updating some tests

--- a/templates/activity/action_task_complete.html
+++ b/templates/activity/action_task_complete.html
@@ -1,6 +1,6 @@
 {% extends "activity/base.html" %}
 {% block activity_item %}
-    <a href="{% url profile record.user.id %}">{{ record.user.get_name }}</a> completed 
+    <a href="{% url profile record.user.id %}">{{ record.user }}</a> completed 
     <a href="{% url action_detail content_object.action.slug %}">{{ content_object.name }}</a> 
-    on {{ record.created }}    
+    on {{ record.created }}
 {% endblock %}
