added a groups listing page to view all of the new groups

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
                 <div id="nav">
                     <a href="{% url rah.views.index %}">Home</a> |
                     <a href="{% url rah.views.action_show %}">Actions</a> |
+                    <a href="{% url group_list %}">Groups</a> |
 					<a href="{% url blog_index %}">Blog</a>
                     {# <a href="">About us</a> #}
                 </div>
