--- a/templates/rah/group_detail.html
+++ b/templates/rah/group_detail.html
@@ -2,15 +2,7 @@
 
 {% block content %}
     <div id="group_header" class="group_section">
-        <img class="group_image" src="{{ MEDIA_URL }}{{ group.image }}" alt="group image" height="75" width="75" />
-        {% if group.is_joinable and is_member %}
-            <a class="group_leave" href="{% url group_leave group.id %}">Leave Group</a>
-        {% endif %}
-        <h1>{{ group.name }}</h1>
-        <p>{{ group.description }}</p>
-        <p class="membership_type">
-            Group Type: {% if group.is_public %}Public{% else %}Private{% endif %}
-        </p>
+        {% include "rah/_group_header.html" %}
     </div>
     
     <div id="group_info" class="group_section">
