--- a/static/css/style.css
+++ b/static/css/style.css
@@ -379,7 +379,7 @@ acronym {
 .whos_working { margin-left: 25px; font-size: 0.9em; }
 
 /* @group groups */
-.group_section { margin-bottom: 25px; } 
+.group_section { margin-bottom: 25px; }
 
 #group_create_form { margin-top: 30px; }
 
@@ -392,6 +392,8 @@ acronym {
 #group_create_form ul { list-style-type: none; color: #373637; margin-left: 10px; }
 
 .group_image { float: left; margin-right: 10px; }
+
+.group_description { font-size: 0.8em; }
 
 .group_leave { float: right; font-size: 0.8em; display: inline; }
 
