--- a/templates/records/action_commitment.html
+++ b/templates/records/action_commitment.html
@@ -1,4 +1,4 @@
-{% extends "activity/base.html" %}
+{% extends "records/base.html" %}
 {% block activity_item %}
     <a href="{% url profile record.user.id %}">{{ record.user }}</a> committed to  
     <a href="{% url action_detail content_object.slug %}">{{ content_object.name }}</a> 
