--- a/templates/records/comment_mark_useful.html
+++ b/templates/records/comment_mark_useful.html
@@ -1,4 +1,4 @@
-{% extends "activity/base.html" %}
+{% extends "records/base.html" %}
 {% block activity_item %}
     <a href="{% url profile record.user.id %}">{{ record.user }}</a> marked a comment as useful
     on {{ record.created }} {% if record.points %}for {{ record.points }} points{% endif %}
