--- a/templates/records/mag_invite_friend.html
+++ b/templates/records/mag_invite_friend.html
@@ -1,4 +1,4 @@
-{% extends "activity/base.html" %}
+{% extends "records/base.html" %}
 {% block activity_item %}
     <a href="{% url profile record.user.id %}">{{ record.user }}</a> invited a friend to join Repower@Home 
     on {{ record.created }}{% if record.points %}for {{ record.points }} points{% endif %}
