--- a/templates/records/mag_request_party_host_info.html
+++ b/templates/records/mag_request_party_host_info.html
@@ -1,4 +1,4 @@
-{% extends "activity/base.html" %}
+{% extends "records/base.html" %}
 {% block activity_item %}
     <a href="{% url profile record.user.id %}">{{ record.user }}</a> requested info about hosting a house party
     on {{ record.created }} {% if record.points %}for {{ record.points }} points{% endif %}
